--- a/server/app/templates/search/pagination.html
+++ b/server/app/templates/search/pagination.html
@@ -52,6 +52,7 @@
                 $('#see-more-similar').on('click', function () {
                     $('.result.hidden').removeClass('hidden');
                     $(this).addClass('hidden');
+                    $('#few-similars-message').addClass('hidden');
                 });
             })
         </script>
