--- a/server/app/templates/base.html
+++ b/server/app/templates/base.html
@@ -23,6 +23,7 @@
     <script src="{{ url_for('static', filename='js/libs/select2.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/nprogress.js') }}"></script>
     <script src="{{ url_for('static', filename='js/libs/autosize.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/libs/lunr.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/questions/delete.js') }}"></script>
     <script src="{{ url_for('static', filename='js/questions/edit.js') }}"></script>
     <script src="{{ url_for('static', filename='js/questions/tags.js') }}"></script>
