--- a/server/app/static/style/question.scss
+++ b/server/app/static/style/question.scss
@@ -151,6 +151,10 @@
           padding: 4px 8px;
           width: 100%;
           margin-bottom: 5px;
+
+          &:hover, &.active {
+            background-color: #204d74;
+          }
         }
       }
     }
