Muestro respuesta en tarjetas de resultados

--- a/server/app/templates/search/result.html
+++ b/server/app/templates/search/result.html
@@ -95,6 +95,19 @@
                 </small>
             </blockquote>
 
+            <blockquote>
+                <p class="question-answer"
+                   data-attribute-name="answer"
+                   data-attribute-default="Pregunta sin respuesta"
+                   data-attribute-display-template="“ $ ”">
+                    {% if result.answer and result.answer|length > 0 %}
+                        “ {{ result.answer }} ”
+                    {% else %}
+                        Pregunta sin respuesta
+                    {% endif %}
+                </p>
+            </blockquote>
+
             <div class="tags">
                 {% for tag_name in ['topic', 'subtopic'] %}
                     {% set has_tag = result[tag_name] and result[tag_name].name and result[tag_name].name|length > 0 %}
