Fix bug al adivinar delimitadores del csv

--- a/server/app/templates/forms/process_spreadsheet.html
+++ b/server/app/templates/forms/process_spreadsheet.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 field-label-container header-checkbox">
                     {{ form.discard_first_row() }}
-                </div
+                </div>
             </div>
 
             <div class="col-xs-12 no-padding select-group">
