--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -14,6 +14,11 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    {% if call_or_get(current_user.is_authenticated) %}
+                        <li>
+                            <a style="pointer-events: none">{{ current_user.email }}</a>
+                        </li>
+                    {% endif %}
                     <li>
                         {% if call_or_get(current_user.is_authenticated) %}
                             <a href="{{ url_for('user.logout') }}">SALIR</a>
