--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
     <section class="container-fluid">
         <div class="row panels-row">
 
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-4 {{ 'col-sm-offset-2' if not current_user.has_role('admin') else '' }}">
                 <a class="panel panel-default panel-icon" href="{{ url_for('search') }}">
                     <div class="panel-heading hidden-xs"><i class="fa fa-search"></i></div>
                     <div class="panel-body">
@@ -23,15 +23,17 @@
                 </a>
             </div>
 
-            <div class="col-xs-12 col-sm-4">
-                <a class="panel panel-default panel-icon" href="{{ url_for('question_upload') }}">
-                    <div class="panel-heading hidden-xs"><i class="fa fa-wpforms"></i></div>
-                    <div class="panel-body">
-                        <h3><span class="visible-xs-inline"><i class="fa fa-wpforms text-secondary"></i>&nbsp;</span>Carga de preguntas</h3>
-                        <p class="text-muted">Formulario para carga manual y alternativa de subida de planilla para carga de preguntas multiples.</p>
-                    </div>
-                </a>
-            </div>
+            {% if current_user.has_role('admin') %}
+                <div class="col-xs-12 col-sm-4">
+                    <a class="panel panel-default panel-icon" href="{{ url_for('question_upload') }}">
+                        <div class="panel-heading hidden-xs"><i class="fa fa-wpforms"></i></div>
+                        <div class="panel-body">
+                            <h3><span class="visible-xs-inline"><i class="fa fa-wpforms text-secondary"></i>&nbsp;</span>Carga de preguntas</h3>
+                            <p class="text-muted">Formulario para carga manual y alternativa de subida de planilla para carga de preguntas multiples.</p>
+                        </div>
+                    </a>
+                </div>
+            {% endif %}
         </div>
     </section>
 {% endblock %}
