--- a/app/templates/forms/process_spreadsheet.html
+++ b/app/templates/forms/process_spreadsheet.html
@@ -139,11 +139,7 @@
 
     <script>
         $(function () {
-            // Tipo de dato esperado en cada columna
-            var desiredTypes = ['Categoria', 'Numeros','Texto', 'Texto', 'Otro', 'Categoria', 'Categoria', 'Texto'];
-            var cant_have_empty = [true, true, false, true, true, false, false , true];
-            var spreadsheetTypes = {{ spreadsheet_summary.datatypes|tojson|safe }};
-            var bestRowFromSpreadsheet = {{ spreadsheet_summary.best_row|tojson|safe }};
+
             function update_example() {
                for (var i = 0; i < selects.length; i++) {
                    var $select = $(selects[i]);
@@ -173,9 +169,34 @@
                    $attributePreviewElement.html(attributeValue);
                }
             }
+
+            // Sugerencias para los campos
+            var fields = {report: ['Informe', 'informe'],
+                          number: ['N°', 'Nro.', 'Numero', 'Nro', 'numero'],
+                          context: ['Contexto', 'contexto'],
+                          body: ['Pregunta', 'pregunta'],
+                          author: ['Autor', 'autor'],
+                          topic: ['Organo', 'organo', 'Requerido', 'requerido'],
+                          subtopic: ['Area', 'area', 'Gestion', 'gestion'],
+                          answer: ['Respuesta', 'respuesta']
+                          }
+            for (var key in fields){
+              var selector = $('select#' + key + ' option');
+              var filterStrings = [];
+              for (var i in fields[key]){
+                filterStrings.push(':contains(' + fields[key][i] + ')');
+              }
+              filterStrings = filterStrings.join(', ')
+              selector.filter(filterStrings).prop('selected', true);
+            }
+            // Tipo de dato esperado en cada columna
+            var desiredTypes = ['Categoria', 'Numeros','Texto', 'Texto', 'Otro', 'Categoria', 'Categoria', 'Texto'];
+            var cant_have_empty = [true, true, false, true, true, false, false , true];
+            var spreadsheetTypes = {{ spreadsheet_summary.datatypes|tojson|safe }};
+            var bestRowFromSpreadsheet = {{ spreadsheet_summary.best_row|tojson|safe }};
             var selects = $('form select');
             selects.on('change', update_example);
-            update_example()
+            update_example();
         })
     </script>
 {% endblock %}
