--- a/app/templates/forms/question_upload_form.html
+++ b/app/templates/forms/question_upload_form.html
@@ -8,7 +8,7 @@
         {{ form.csrf_token }}
 
         <div class="form-group">
-            <p>Seleccione una planilla (formatos soportados: csv)</p>
+            <p>Seleccione una planilla (formatos soportados: xlsx y csv)</p>
             <input class="" id="spreadsheet" name="spreadsheet" type="file">
         </div>
         <input id="submit-btn" type=submit value="Subir" class="btn btn-success btn-sm">
