--- a/app/templates/forms/process_spreadsheet_taquigraficas.html
+++ b/app/templates/forms/process_spreadsheet_taquigraficas.html
@@ -1,165 +1,30 @@
-{% extends 'forms/base_forms.html' %}
+{% extends 'forms/process_spreadsheet.html' %}
 
-{% from "forms/_formhelpers.html" import render_field, render_label %}
+{% block question_number %}
+{% endblock %}
 
-{% block form %}
-    <form id="upload_form" method="post" action="{{ url_for('process_spreadsheet', filename=filename) }}"
-          class="form-tab" enctype="multipart/form-data">
-        {{ form.csrf_token }}
+{% block topic %}
+{% endblock %}
 
-        <div class="form-group container-fluid">
-            <div class="col-xs-12">
-                <div class="col-xs-12 col-sm-6 field-label-container">
-                    {{ form.discard_first_row.label() }}
-                </div>
-                <div class="col-xs-12 col-sm-6 field-label-container header-checkbox">
-                    {{ form.discard_first_row() }}
-                </div>
-            </div>
+{% block subtopic %}
+{% endblock %}
 
-            <div class="col-xs-12 no-padding select-group">
-                <div class="col-xs-12 col-sm-6 field-label-container">
-                    {{ form.report.label() }}
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    {{ form.report(class_='form-control') }}
-                </div>
-                <div class="col-xs-12">
-                  <p class="type-warning"></p>
-                </div>
-            </div>
+{% block form_action %}
+    action="{{ url_for('process_spreadsheet_taquigraficas', filename=filename) }}"
+{% endblock %}
 
-            <div class="col-xs-12 no-padding select-group">
-                <div class="col-xs-12 col-sm-6 field-label-container">
-                    {{ form.context.label() }}
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    {{ form.context(class_='form-control') }}
-                </div>
-                <div class="col-xs-12">
-                  <p class="type-warning"></p>
-                </div>
-            </div>
+{% block answer %}
+    {{ super() }}
 
-            <div class="col-xs-12 no-padding select-group">
-                <div class="col-xs-12 col-sm-6 field-label-container">
-                    {{ form.body.label() }}
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    {{ form.body(class_='form-control') }}
-                </div>
-                <div class="col-xs-12">
-                  <p class="type-warning"></p>
-                </div>
-            </div>
-
-            <div class="col-xs-12 no-padding select-group">
-                <div class="col-xs-12 col-sm-6 field-label-container">
-                    {{ form.author.label() }}
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    {{ form.author(class_='form-control') }}
-                </div>
-                <div class="col-xs-12">
-                  <p class="type-warning"></p>
-                </div>
-            </div>
-
-            <div class="col-xs-12 no-padding select-group">
-                <div class="col-xs-12 col-sm-6 field-label-container">
-                    {{ form.answer.label() }}
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    {{ form.answer(class_='form-control') }}
-                </div>
-                <div class="col-xs-12">
-                  <p class="type-warning"></p>
-                </div>
-            </div>
-
-            <div class="col-xs-10 col-xs-offset-1">
-                {% if form.number.errors %}
-                    <p>Debe seleccionar columna para el numero de pregunta</p>
-                {% endif %}
-                {% if form.body.errors %}
-                    <p>Debe seleccionar columna para el texto de la pregunta</p>
-                {% endif %}
-            </div>
-
-            <div class="col-xs-12 no-padding preview-container">
-                <h5>Previsualización</h5>
-                {% with result = {}, hide_more_info_link = True, hide_actions = True %}
-                    {% include 'search/result.html' %}
-                {% endwith %}
-            </div>
-
-            <div class="col-xs-12 no-padding submit-container">
-                <input id="submit-btn" type=submit value="Procesar y ver preguntas" class="btn btn-success btn-sm">
-            </div>
-
+    <div class="col-xs-12 no-padding select-group">
+        <div class="col-xs-12 col-sm-6 field-label-container">
+            {{ form.answer_author.label() }}
         </div>
-    </form>
-
-    <script>
-        $(function () {
-
-            function update_example() {
-               for (var i = 0; i < selects.length; i++) {
-                   var $select = $(selects[i]);
-                   var attributeName = $select.attr('id');
-                   var $attributePreviewElement = $('.result [data-attribute-name="' + attributeName + '"]');
-                   var attributeColumnNumber = parseInt($select.find('option:selected').val());
-                   var attributeValue;
-                   var msg = '';
-                   var warningEl = $(this).parents('.select-group').find('.type-warning');
-                   if (attributeColumnNumber > -1) {
-                     var valueTemplate = $attributePreviewElement.data('attribute-display-template');
-                     attributeValue = valueTemplate.replace('$', bestRowFromSpreadsheet[attributeColumnNumber]);
-                     if ($.inArray(desiredTypes[i], spreadsheetTypes[attributeColumnNumber].types) == -1){
-                           msg = 'No coincide el tipo de dato. Se esperaba ' +  desiredTypes[i] + ' y fue ' +  spreadsheetTypes[attributeColumnNumber].types;
-                     }else {
-                           msg = ''
-                     }
-                     if (cant_have_empty[i] && spreadsheetTypes[attributeColumnNumber].empty_status=='Contiene Vacios'){
-                       msg = msg + ' Hay valores vacios'
-                     }else{
-                       msg = msg + ' ' + spreadsheetTypes[attributeColumnNumber].warnings
-                     }
-                       warningEl.text(msg);
-                   } else {
-                       attributeValue = $attributePreviewElement.data('attribute-default');
-                   }
-                   $attributePreviewElement.html(attributeValue);
-               }
-            }
-
-            // Sugerencias para los campos
-            var fields = {report: ['Informe', 'informe'],
-                          number: ['N°', 'Nro.', 'Numero', 'Nro', 'numero', 'NUMERO'],
-                          context: ['Contexto', 'contexto', 'CONTEXTO'],
-                          body: ['Pregunta', 'pregunta', 'PREGUNTA'],
-                          author: ['Autor', 'autor', 'AUTOR'],
-                          topic: ['Organo', 'organo', 'ORGANO', 'Requerido', 'requerido', 'REQUERIDO'],
-                          subtopic: ['Area', 'area', 'Área', 'área', 'ÁREA', 'AREA', 'Gestion', 'gestion', 'gestión', 'Gestión', 'GESTION', 'GESTIÓN'],
-                          answer: ['Respuesta', 'respuesta', 'RESPUESTA']
-                          }
-            for (var key in fields){
-              var selector = $('select#' + key + ' option');
-              var filterStrings = [];
-              for (var i in fields[key]){
-                filterStrings.push(':contains(' + fields[key][i] + ')');
-              }
-              filterStrings = filterStrings.join(', ')
-              selector.filter(filterStrings).prop('selected', true);
-            }
-            // Tipo de dato esperado en cada columna
-            var desiredTypes = ['Categoria', 'Numeros','Texto', 'Texto', 'Otro', 'Texto', 'Categoria', 'Categoria'];
-            var cant_have_empty = [true, true, false, true, true, false, false , true];
-            var spreadsheetTypes = {{ spreadsheet_summary.datatypes|tojson|safe }};
-            var bestRowFromSpreadsheet = {{ spreadsheet_summary.best_row|tojson|safe }};
-            var selects = $('form select');
-            selects.on('change', update_example);
-            update_example();
-        })
-    </script>
+        <div class="col-xs-12 col-sm-6">
+            {{ form.answer_author(class_='form-control') }}
+        </div>
+        <div class="col-xs-12">
+          <p class="type-warning"></p>
+        </div>
+    </div>
 {% endblock %}
